--- a/assets/style.css
+++ b/assets/style.css
@@ -155,6 +155,12 @@ h4{
     width: 100%;
     overflow: auto;
 }
+.search-colors{
+    border: 1px solid #888;
+    padding: 10px;
+    width: 80%;
+    margin-bottom: 30px;
+}
 .libraries .select-colors{
     width: 50px;
     height: 40px;
